--- a/Css/style.css
+++ b/Css/style.css
@@ -139,6 +139,7 @@ body{
   width: auto;
   height: auto;
   border: 0px solid;
+  filter: drop-shadow(16px 16px 5px black);
  }
  #table{
   color: white;
